// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Restate constructs [Experimental] Create a self-hosted Restate environment deployed on ECS Fargate 1`] = `
"Resources:
  ZoneA5DE4B68:
    Type: 'AWS::Route53::HostedZone'
    Properties:
      Name: example.com.
  RestateContainerDataStore2CD55CF9:
    Type: 'AWS::EFS::FileSystem'
    Properties:
      Encrypted: true
      FileSystemPolicy:
        Statement:
          - Action: 'elasticfilesystem:ClientMount'
            Condition:
              Bool:
                'elasticfilesystem:AccessedViaMountTarget': 'true'
            Effect: Allow
            Principal:
              AWS: '*'
            Sid: AllowEfsMount
          - Action:
              - 'elasticfilesystem:ClientWrite'
              - 'elasticfilesystem:ClientRootAccess'
            Condition:
              Bool:
                'elasticfilesystem:AccessedViaMountTarget': 'true'
            Effect: Allow
            Principal:
              AWS: '*'
        Version: '2012-10-17'
      FileSystemTags:
        - Key: Name
          Value: RestateOnFargateStack/RestateContainer/DataStore
      LifecyclePolicies:
        - TransitionToIA: AFTER_30_DAYS
      PerformanceMode: generalPurpose
      ThroughputMode: bursting
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  RestateContainerDataStoreEfsSecurityGroupF3B38961:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RestateOnFargateStack/RestateContainer/DataStore/EfsSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: RestateOnFargateStack/RestateContainer/DataStore
      VpcId: vpc-12345
  RestateContainerDataStoreEfsSecurityGroupfromRestateOnFargateStackRestateContainerSecurityGroup7DD2FD092049D9445952:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateOnFargateStackRestateContainerSecurityGroup7DD2FD09:2049'
      FromPort: 2049
      GroupId:
        'Fn::GetAtt':
          - RestateContainerDataStoreEfsSecurityGroupF3B38961
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateContainerSecurityGroup6BE91975
          - GroupId
      ToPort: 2049
  RestateContainerDataStoreEfsMountTarget14DA83FA9:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      FileSystemId:
        Ref: RestateContainerDataStore2CD55CF9
      SecurityGroups:
        - 'Fn::GetAtt':
            - RestateContainerDataStoreEfsSecurityGroupF3B38961
            - GroupId
      SubnetId: p-12345
  RestateContainerDataStoreEfsMountTarget293F01D03:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      FileSystemId:
        Ref: RestateContainerDataStore2CD55CF9
      SecurityGroups:
        - 'Fn::GetAtt':
            - RestateContainerDataStoreEfsSecurityGroupF3B38961
            - GroupId
      SubnetId: p-67890
  RestateContainerCluster8240BE00:
    Type: 'AWS::ECS::Cluster'
  RestateContainerRestateTaskTaskRole8631C1EC:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
  RestateContainerRestateTaskTaskRoleDefaultPolicy48E28208:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateContainerInvokerRoleEFCDC05B
                - Arn
          - Action:
              - 'elasticfilesystem:ClientMount'
              - 'elasticfilesystem:ClientWrite'
              - 'elasticfilesystem:ClientRootAccess'
            Condition:
              Bool:
                'elasticfilesystem:AccessedViaMountTarget': 'true'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateContainerDataStore2CD55CF9
                - Arn
        Version: '2012-10-17'
      PolicyName: RestateContainerRestateTaskTaskRoleDefaultPolicy48E28208
      Roles:
        - Ref: RestateContainerRestateTaskTaskRole8631C1EC
  RestateContainerRestateTaskB2410338:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: RESTATE_LOG_FORMAT
              Value: json
            - Name: RESTATE_NODE_NAME
              Value: fargate
          Essential: true
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: RestateContainerLogs4399E84C
              awslogs-stream-prefix: restate
              awslogs-region: region
          MountPoints:
            - ContainerPath: /restate-data
              ReadOnly: false
              SourceVolume: restateStore
          Name: restate-runtime
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
            - ContainerPort: 9070
              Protocol: tcp
          StartTimeout: 20
          StopTimeout: 20
      Cpu: '4096'
      ExecutionRoleArn:
        'Fn::GetAtt':
          - RestateContainerRestateTaskExecutionRole10CF0851
          - Arn
      Family: RestateOnFargateStackRestateContainerRestateTaskBB43DAFB
      Memory: '8192'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      TaskRoleArn:
        'Fn::GetAtt':
          - RestateContainerRestateTaskTaskRole8631C1EC
          - Arn
      Volumes:
        - EFSVolumeConfiguration:
            AuthorizationConfig: {}
            FilesystemId:
              Ref: RestateContainerDataStore2CD55CF9
          Name: restateStore
  RestateContainerRestateTaskExecutionRole10CF0851:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
  RestateContainerRestateTaskExecutionRoleDefaultPolicyFDEA8435:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateContainerLogs4399E84C
                - Arn
        Version: '2012-10-17'
      PolicyName: RestateContainerRestateTaskExecutionRoleDefaultPolicyFDEA8435
      Roles:
        - Ref: RestateContainerRestateTaskExecutionRole10CF0851
  RestateContainerTaskPolicyC2BA310D:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Resource: '*'
            Sid: AllowAssumeAnyRole
        Version: '2012-10-17'
      PolicyName: RestateContainerTaskPolicyC2BA310D
      Roles:
        - Ref: RestateContainerRestateTaskTaskRole8631C1EC
  RestateContainerInvokerRoleEFCDC05B:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              AWS:
                'Fn::GetAtt':
                  - RestateContainerRestateTaskTaskRole8631C1EC
                  - Arn
        Version: '2012-10-17'
      Description: Assumed by Restate deployment to invoke Lambda-based services
  RestateContainerLogs4399E84C:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: /restate/RestateContainer
      RetentionInDays: 30
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  RestateContainerSecurityGroup6BE91975:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RestateOnFargateStack/RestateContainer/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      VpcId: vpc-12345
  RestateContainerSecurityGroupfromRestateOnFargateStackRestateContainerDataStoreEfsSecurityGroup93B5B80320493195848B:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: >-
        from
        RestateOnFargateStackRestateContainerDataStoreEfsSecurityGroup93B5B803:2049
      FromPort: 2049
      GroupId:
        'Fn::GetAtt':
          - RestateContainerSecurityGroup6BE91975
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateContainerDataStoreEfsSecurityGroupF3B38961
          - GroupId
      ToPort: 2049
  RestateContainerSecurityGroupfromRestateOnFargateStackRestateContainerAlbSecurityGroup84369A89808040114BB3:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Load balancer to target
      FromPort: 8080
      GroupId:
        'Fn::GetAtt':
          - RestateContainerSecurityGroup6BE91975
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateContainerAlbSecurityGroup86380461
          - GroupId
      ToPort: 8080
  RestateContainerSecurityGroupfromRestateOnFargateStackRestateContainerAlbSecurityGroup84369A899070981DBFA5:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Load balancer to target
      FromPort: 9070
      GroupId:
        'Fn::GetAtt':
          - RestateContainerSecurityGroup6BE91975
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateContainerAlbSecurityGroup86380461
          - GroupId
      ToPort: 9070
  RestateContainerService4B07AFB0:
    Type: 'AWS::ECS::Service'
    Properties:
      Cluster:
        Ref: RestateContainerCluster8240BE00
      DeploymentConfiguration:
        Alarms:
          AlarmNames: []
          Enable: false
          Rollback: false
        DeploymentCircuitBreaker:
          Enable: true
          Rollback: true
        MaximumPercent: 100
        MinimumHealthyPercent: 0
      DeploymentController:
        Type: ECS
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: restate-runtime
          ContainerPort: 8080
          TargetGroupArn:
            Ref: >-
              RestateContainerAlbIngressListenerFargateIngressTargetGroup38EB7B83
        - ContainerName: restate-runtime
          ContainerPort: 9070
          TargetGroupArn:
            Ref: RestateContainerAlbAdminListenerFargateAdminTargetGroup139F200C
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - 'Fn::GetAtt':
                - RestateContainerSecurityGroup6BE91975
                - GroupId
          Subnets:
            - s-12345
            - s-67890
      TaskDefinition:
        Ref: RestateContainerRestateTaskB2410338
    DependsOn:
      - RestateContainerAlbAdminListenerFargateAdminTargetGroup139F200C
      - RestateContainerAlbAdminListenerFF3856A3
      - RestateContainerAlbIngressListenerFargateIngressTargetGroup38EB7B83
      - RestateContainerAlbIngressListener09867A46
      - RestateContainerRestateTaskTaskRoleDefaultPolicy48E28208
      - RestateContainerRestateTaskTaskRole8631C1EC
  RestateContainerAlbC83EF273:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: 'false'
      Scheme: internal
      SecurityGroups:
        - 'Fn::GetAtt':
            - RestateContainerAlbSecurityGroup86380461
            - GroupId
      Subnets:
        - p-12345
        - p-67890
      Type: application
  RestateContainerAlbSecurityGroup86380461:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        Automatically created Security Group for ELB
        RestateOnFargateStackRestateContainerAlbEE60ACC3
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 9070
          FromPort: 9070
          IpProtocol: tcp
          ToPort: 9070
      VpcId: vpc-12345
  RestateContainerAlbSecurityGrouptoRestateOnFargateStackRestateContainerSecurityGroup7DD2FD098080B5F4540C:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Load balancer to target
      DestinationSecurityGroupId:
        'Fn::GetAtt':
          - RestateContainerSecurityGroup6BE91975
          - GroupId
      FromPort: 8080
      GroupId:
        'Fn::GetAtt':
          - RestateContainerAlbSecurityGroup86380461
          - GroupId
      IpProtocol: tcp
      ToPort: 8080
  RestateContainerAlbSecurityGrouptoRestateOnFargateStackRestateContainerSecurityGroup7DD2FD09907051D68255:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Load balancer to target
      DestinationSecurityGroupId:
        'Fn::GetAtt':
          - RestateContainerSecurityGroup6BE91975
          - GroupId
      FromPort: 9070
      GroupId:
        'Fn::GetAtt':
          - RestateContainerAlbSecurityGroup86380461
          - GroupId
      IpProtocol: tcp
      ToPort: 9070
  RestateContainerAlbIngressListener09867A46:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      Certificates:
        - CertificateArn:
            Ref: RestateContainerCertificate65E4F360
      DefaultActions:
        - TargetGroupArn:
            Ref: >-
              RestateContainerAlbIngressListenerFargateIngressTargetGroup38EB7B83
          Type: forward
      LoadBalancerArn:
        Ref: RestateContainerAlbC83EF273
      Port: 443
      Protocol: HTTPS
  RestateContainerAlbIngressListenerFargateIngressTargetGroup38EB7B83:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /restate/health
      HealthCheckTimeoutSeconds: 2
      HealthyThresholdCount: 3
      Port: 8080
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '5'
        - Key: stickiness.enabled
          Value: 'false'
      TargetType: ip
      UnhealthyThresholdCount: 3
      VpcId: vpc-12345
  RestateContainerAlbAdminListenerFF3856A3:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      Certificates:
        - CertificateArn:
            Ref: RestateContainerCertificate65E4F360
      DefaultActions:
        - TargetGroupArn:
            Ref: RestateContainerAlbAdminListenerFargateAdminTargetGroup139F200C
          Type: forward
      LoadBalancerArn:
        Ref: RestateContainerAlbC83EF273
      Port: 9070
      Protocol: HTTPS
  RestateContainerAlbAdminListenerFargateAdminTargetGroup139F200C:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /health
      HealthCheckTimeoutSeconds: 2
      HealthyThresholdCount: 3
      Port: 9070
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '5'
        - Key: stickiness.enabled
          Value: 'false'
      TargetType: ip
      UnhealthyThresholdCount: 3
      VpcId: vpc-12345
  RestateContainerCertificate65E4F360:
    Type: 'AWS::CertificateManager::Certificate'
    Properties:
      DomainName: restate.example.com
      DomainValidationOptions:
        - DomainName: restate.example.com
          HostedZoneId:
            Ref: ZoneA5DE4B68
      Tags:
        - Key: Name
          Value: RestateOnFargateStack/RestateContainer/Certificate
      ValidationMethod: DNS
  RestateContainerAlbAliasF68387BC:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      AliasTarget:
        DNSName:
          'Fn::Join':
            - ''
            - - dualstack.
              - 'Fn::GetAtt':
                  - RestateContainerAlbC83EF273
                  - DNSName
        HostedZoneId:
          'Fn::GetAtt':
            - RestateContainerAlbC83EF273
            - CanonicalHostedZoneID
      HostedZoneId:
        Ref: ZoneA5DE4B68
      Name: restate.example.com.
      Type: A
"
`;

exports[`Restate constructs Create a self-hosted Restate environment deployed on EC2 (TLS termination) 1`] = `
"Resources:
  RestateInstanceRoleACC59A6F:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/AmazonSSMManagedInstanceCore'
  RestateInstanceRoleDefaultPolicyD1D39538:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateLogsFD86ECAE
                - Arn
        Version: '2012-10-17'
      PolicyName: RestateInstanceRoleDefaultPolicyD1D39538
      Roles:
        - Ref: RestateInstanceRoleACC59A6F
  RestateInvokerRole42565598:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              AWS:
                'Fn::GetAtt':
                  - RestateInstanceRoleACC59A6F
                  - Arn
        Version: '2012-10-17'
  RestateAssumeInvokerRolePolicy1FA6B6C2:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateInvokerRole42565598
                - Arn
            Sid: AllowAssumeInvokerRole
        Version: '2012-10-17'
      PolicyName: RestateAssumeInvokerRolePolicy1FA6B6C2
      Roles:
        - Ref: RestateInstanceRoleACC59A6F
  RestateLogsFD86ECAE:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: /restate/Restate
      RetentionInDays: 30
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  RestateHostInstanceSecurityGroup471D630B:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RestateSelfHostedServerEc2Stack/Restate/Host/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: RestateSelfHostedServerEc2Stack/Restate/Host
      VpcId: vpc-12345
  RestateHostInstanceProfile14AE3AC8:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - Ref: RestateInstanceRoleACC59A6F
  RestateHost1AC4F9D1:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: dummy1a
      BlockDeviceMappings:
        - DeviceName: /dev/sdd
          Ebs:
            DeleteOnTermination: false
            VolumeSize: 8
          VirtualName: restate-data
      IamInstanceProfile:
        Ref: RestateHostInstanceProfile14AE3AC8
      ImageId:
        Ref: >-
          SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61arm64C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t4g.micro
      SecurityGroupIds:
        - 'Fn::GetAtt':
            - RestateHostInstanceSecurityGroup471D630B
            - GroupId
        - 'Fn::GetAtt':
            - RestateIngressSecurityGroupAF84F229
            - GroupId
        - 'Fn::GetAtt':
            - RestateAdminSecurityGroupA3FF2853
            - GroupId
      SubnetId: p-12345
      Tags:
        - Key: Name
          Value: RestateSelfHostedServerEc2Stack/Restate/Host
      UserData:
        'Fn::Base64':
          'Fn::Join':
            - ''
            - - >+
                Content-Type: multipart/mixed;
                boundary="+AWS+CDK+User+Data+Separator=="

                MIME-Version: 1.0


                --+AWS+CDK+User+Data+Separator==

                Content-Type: text/cloud-config

                Content-Transfer-Encoding: base64

              - 'Fn::Base64': |-
                  cloud_final_modules:
                  - [scripts-user, always]
              - |+

                --+AWS+CDK+User+Data+Separator==
                Content-Type: text/x-shellscript
                Content-Transfer-Encoding: base64

              - 'Fn::Base64':
                  'Fn::Join':
                    - ''
                    - - >-
                        #!/bin/bash

                        set -euf -o pipefail

                        yum install -y npm && npm install -gq
                        @restatedev/restate@1.4 @restatedev/restatectl@1.4

                        yum install -y docker


                        if mount | grep -qs '/var/restate'; then
                          echo "/var/restate is mounted"
                        else
                          if [ -d /var/restate ]; then
                            if [ "$(ls -A /var/restate)" ]; then
                              echo "Data exists in /var/restate that is not on data volume; refusing to overwrite!"
                              exit 1
                            fi
                          else
                            mkdir /var/restate
                          fi
                          if file -sL /dev/sdd | grep -q ': data$'; then
                            mkfs -t xfs /dev/sdd
                          fi
                          mount /dev/sdd /var/restate
                          if ! grep -qs '/var/restate' /etc/fstab; then
                            echo "/dev/sdd /var/restate xfs defaults 0 0" >> /etc/fstab
                            echo "Added entry for /dev/sdd to /etc/fstab"
                          else
                            echo "Entry for /dev/sdd already exists in /etc/fstab"
                          fi
                        fi


                        mkdir -p /etc/restate

                        cat << EOF > /etc/restate/config.toml

                        roles = [
                            "worker",
                            "admin",
                            "metadata-server",
                            "log-server",
                            "http-ingress",
                        ]

                        node-name = "restate-0"

                        cluster-name = "Restate"

                        default-num-partitions = 4

                        rocksdb-total-memory-size = "512 MB"


                        [admin]

                        bind-address = "127.0.0.1:9070"


                        [admin.query-engine]

                        memory-size = "256.0 MiB"


                        [ingress]

                        bind-address = "127.0.0.1:8080"

                        EOF

                        systemctl start docker.service

                        if [ "$(docker ps -qa -f name=adot)" ]; then docker stop
                        adot || true; docker rm adot; fi

                        docker run --name adot --restart on-failure --detach
                        --pull always -p 4317:4317 -p 55680:55680 -p 8889:8888
                        public.ecr.aws/aws-observability/aws-otel-collector:latest

                        if [ "$(docker ps -qa -f name=restate)" ]; then docker
                        stop restate || true; docker rm restate; fi

                        docker run --name restate --restart on-failure --detach
                        --pull always --volume /etc/restate:/etc/restate
                        --volume /var/restate:/restate-data --network=host -e
                        RESTATE_LOG_FORMAT="json" -e RUST_LOG="info" -e
                        RESTATE_TRACING_ENDPOINT="http://localhost:4317"
                        --log-driver=awslogs --log-opt awslogs-group=
                      - Ref: RestateLogsFD86ECAE
                      - ' docker.io/restatedev/restate:1.4 --config-file /etc/restate/config.toml'
              - |

                --+AWS+CDK+User+Data+Separator==--
    DependsOn:
      - RestateInstanceRoleDefaultPolicyD1D39538
      - RestateInstanceRoleACC59A6F
  RestateIngressSecurityGroupAF84F229:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Restate Ingress ACLs
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      VpcId: vpc-12345
  RestateIngressSecurityGroupfromRestateSelfHostedServerEc2StackRestateIngressSecurityGroup2A345A7B443DDD57F2A:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Restate ingress
      FromPort: 443
      GroupId:
        'Fn::GetAtt':
          - RestateIngressSecurityGroupAF84F229
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateIngressSecurityGroupAF84F229
          - GroupId
      ToPort: 443
  RestateAdminSecurityGroupA3FF2853:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Restate Admin ACLs
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      VpcId: vpc-12345
  RestateAdminSecurityGroupfromRestateSelfHostedServerEc2StackRestateAdminSecurityGroupFC96B1BB907362FDE390:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Restate admin
      FromPort: 9073
      GroupId:
        'Fn::GetAtt':
          - RestateAdminSecurityGroupA3FF2853
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateAdminSecurityGroupA3FF2853
          - GroupId
      ToPort: 9073
Parameters: Any<Object>
"
`;

exports[`Restate constructs Create a self-hosted Restate environment deployed on EC2 1`] = `
"Resources:
  RestateInstanceRoleACC59A6F:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/AmazonSSMManagedInstanceCore'
  RestateInstanceRoleDefaultPolicyD1D39538:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateLogsFD86ECAE
                - Arn
        Version: '2012-10-17'
      PolicyName: RestateInstanceRoleDefaultPolicyD1D39538
      Roles:
        - Ref: RestateInstanceRoleACC59A6F
  RestateInvokerRole42565598:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              AWS:
                'Fn::GetAtt':
                  - RestateInstanceRoleACC59A6F
                  - Arn
        Version: '2012-10-17'
  RestateAssumeInvokerRolePolicy1FA6B6C2:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - RestateInvokerRole42565598
                - Arn
            Sid: AllowAssumeInvokerRole
        Version: '2012-10-17'
      PolicyName: RestateAssumeInvokerRolePolicy1FA6B6C2
      Roles:
        - Ref: RestateInstanceRoleACC59A6F
  RestateLogsFD86ECAE:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: /restate/Restate
      RetentionInDays: 30
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  RestateHostInstanceSecurityGroup471D630B:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RestateSelfHostedServerEc2Stack/Restate/Host/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: RestateSelfHostedServerEc2Stack/Restate/Host
      VpcId: vpc-12345
  RestateHostInstanceProfile14AE3AC8:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - Ref: RestateInstanceRoleACC59A6F
  RestateHost1AC4F9D1:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: dummy1a
      BlockDeviceMappings:
        - DeviceName: /dev/sdd
          Ebs:
            DeleteOnTermination: false
            VolumeSize: 8
          VirtualName: restate-data
      IamInstanceProfile:
        Ref: RestateHostInstanceProfile14AE3AC8
      ImageId:
        Ref: >-
          SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61arm64C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t4g.micro
      SecurityGroupIds:
        - 'Fn::GetAtt':
            - RestateHostInstanceSecurityGroup471D630B
            - GroupId
        - 'Fn::GetAtt':
            - RestateIngressSecurityGroupAF84F229
            - GroupId
        - 'Fn::GetAtt':
            - RestateAdminSecurityGroupA3FF2853
            - GroupId
      SubnetId: p-12345
      Tags:
        - Key: Name
          Value: RestateSelfHostedServerEc2Stack/Restate/Host
      UserData:
        'Fn::Base64':
          'Fn::Join':
            - ''
            - - >+
                Content-Type: multipart/mixed;
                boundary="+AWS+CDK+User+Data+Separator=="

                MIME-Version: 1.0


                --+AWS+CDK+User+Data+Separator==

                Content-Type: text/cloud-config

                Content-Transfer-Encoding: base64

              - 'Fn::Base64': |-
                  cloud_final_modules:
                  - [scripts-user, always]
              - |+

                --+AWS+CDK+User+Data+Separator==
                Content-Type: text/x-shellscript
                Content-Transfer-Encoding: base64

              - 'Fn::Base64':
                  'Fn::Join':
                    - ''
                    - - >-
                        #!/bin/bash

                        set -euf -o pipefail

                        yum install -y npm && npm install -gq
                        @restatedev/restate@1.4 @restatedev/restatectl@1.4

                        yum install -y docker


                        if mount | grep -qs '/var/restate'; then
                          echo "/var/restate is mounted"
                        else
                          if [ -d /var/restate ]; then
                            if [ "$(ls -A /var/restate)" ]; then
                              echo "Data exists in /var/restate that is not on data volume; refusing to overwrite!"
                              exit 1
                            fi
                          else
                            mkdir /var/restate
                          fi
                          if file -sL /dev/sdd | grep -q ': data$'; then
                            mkfs -t xfs /dev/sdd
                          fi
                          mount /dev/sdd /var/restate
                          if ! grep -qs '/var/restate' /etc/fstab; then
                            echo "/dev/sdd /var/restate xfs defaults 0 0" >> /etc/fstab
                            echo "Added entry for /dev/sdd to /etc/fstab"
                          else
                            echo "Entry for /dev/sdd already exists in /etc/fstab"
                          fi
                        fi


                        mkdir -p /etc/restate

                        cat << EOF > /etc/restate/config.toml

                        roles = [
                            "worker",
                            "admin",
                            "metadata-server",
                            "log-server",
                            "http-ingress",
                        ]

                        node-name = "restate-0"

                        cluster-name = "Restate"

                        default-num-partitions = 4

                        rocksdb-total-memory-size = "512 MB"


                        [admin]

                        bind-address = "0.0.0.0:9070"


                        [admin.query-engine]

                        memory-size = "256.0 MiB"


                        [ingress]

                        bind-address = "0.0.0.0:8080"

                        EOF

                        systemctl start docker.service

                        if [ "$(docker ps -qa -f name=adot)" ]; then docker stop
                        adot || true; docker rm adot; fi

                        docker run --name adot --restart on-failure --detach
                        --pull always -p 4317:4317 -p 55680:55680 -p 8889:8888
                        public.ecr.aws/aws-observability/aws-otel-collector:latest

                        if [ "$(docker ps -qa -f name=restate)" ]; then docker
                        stop restate || true; docker rm restate; fi

                        docker run --name restate --restart on-failure --detach
                        --pull always --volume /etc/restate:/etc/restate
                        --volume /var/restate:/restate-data --network=host -e
                        RESTATE_LOG_FORMAT="json" -e RUST_LOG="info" -e
                        RESTATE_TRACING_ENDPOINT="http://localhost:4317" -e
                        RESTATE_INGRESS__ADVERTISED_INGRESS_ENDPOINT="http://restate-ingress"
                        --log-driver=awslogs --log-opt awslogs-group=
                      - Ref: RestateLogsFD86ECAE
                      - ' docker.io/restatedev/restate:custom-version --config-file /etc/restate/config.toml'
              - |

                --+AWS+CDK+User+Data+Separator==--
    DependsOn:
      - RestateInstanceRoleDefaultPolicyD1D39538
      - RestateInstanceRoleACC59A6F
  RestateIngressSecurityGroupAF84F229:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Restate Ingress ACLs
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      VpcId: vpc-12345
  RestateIngressSecurityGroupfromRestateSelfHostedServerEc2StackRestateIngressSecurityGroup2A345A7B8080B8082F1D:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Restate ingress
      FromPort: 8080
      GroupId:
        'Fn::GetAtt':
          - RestateIngressSecurityGroupAF84F229
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateIngressSecurityGroupAF84F229
          - GroupId
      ToPort: 8080
  RestateAdminSecurityGroupA3FF2853:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Restate Admin ACLs
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      VpcId: vpc-12345
  RestateAdminSecurityGroupfromRestateSelfHostedServerEc2StackRestateAdminSecurityGroupFC96B1BB9070F9F6DD3D:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Restate admin
      FromPort: 9070
      GroupId:
        'Fn::GetAtt':
          - RestateAdminSecurityGroupA3FF2853
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - RestateAdminSecurityGroupA3FF2853
          - GroupId
      ToPort: 9070
Parameters: Any<Object>
"
`;

exports[`Restate constructs Deploy a Lambda service handler to Restate Cloud environment 1`] = `
"Resources:
  RestateInvokerRole42565598:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Condition:
              StringEquals:
                'sts:ExternalId': env_test
                'aws:PrincipalArn': 'arn:aws:iam::654654156625:role/RestateCloud'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::654654156625:root'
          - Action: 'sts:TagSession'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::654654156625:root'
        Version: '2012-10-17'
  RestateServiceHandlerServiceRole07B26D05:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  RestateServiceHandler71409CD7:
    Type: 'AWS::Lambda::Function'
    Properties:
      Code: Any<Object>
      Handler: index.handler
      Role:
        'Fn::GetAtt':
          - RestateServiceHandlerServiceRole07B26D05
          - Arn
      Runtime: nodejs18.x
    DependsOn:
      - RestateServiceHandlerServiceRole07B26D05
  RestateServiceHandlerCurrentVersion40030E671fc2ba09c2d7b4ea8c6a3f8fee895a65:
    Type: 'AWS::Lambda::Version'
    Properties:
      FunctionName:
        Ref: RestateServiceHandler71409CD7
    Metadata:
      'aws:cdk:do-not-refactor': true
  RestateServiceHandlerCurrentVersionRestateServiceDeployment1DB3C4D6:
    Type: 'Custom::RestateServiceDeployment'
    Properties:
      ServiceToken:
        'Fn::GetAtt':
          - ServiceDeployerEventHandler89EAD25F
          - Arn
      adminUrl: 'https://test.env.us.restate.cloud:9070'
      authTokenSecretArn:
        'Fn::Join':
          - ''
          - - 'arn:'
            - Ref: 'AWS::Partition'
            - ':secretsmanager:region:account-id:secret:secret_name'
      serviceLambdaArn:
        Ref: >-
          RestateServiceHandlerCurrentVersion40030E671fc2ba09c2d7b4ea8c6a3f8fee895a65
      invokeRoleArn:
        'Fn::GetAtt':
          - RestateInvokerRole42565598
          - Arn
      private: 'false'
      insecure: 'false'
    DependsOn:
      - ServiceDeployerInvocationPolicyD09B639D
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  ServiceDeployerEventHandlerServiceRoleF133584F:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'secretsmanager:GetSecretValue'
              - 'secretsmanager:DescribeSecret'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'arn:'
                  - Ref: 'AWS::Partition'
                  - ':secretsmanager:region:account-id:secret:secret_name-??????'
        Version: '2012-10-17'
      PolicyName: ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9
      Roles:
        - Ref: ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerEventHandler89EAD25F:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Description: Restate custom registration handler
      Handler: entrypoint.handler
      MemorySize: 128
      Role:
        'Fn::GetAtt':
          - ServiceDeployerEventHandlerServiceRoleF133584F
          - Arn
      Runtime: nodejs22.x
      Timeout: 180
    DependsOn:
      - ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9
      - ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerDeploymentLogs5B8BE5D2:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName:
        'Fn::Join':
          - ''
          - - /aws/lambda/
            - Ref: ServiceDeployerEventHandler89EAD25F
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: RetainExceptOnCreate
  ServiceDeployerInvocationPolicyD09B639D:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'lambda:InvokeFunction'
            Effect: Allow
            Resource:
              - 'Fn::GetAtt':
                  - RestateServiceHandler71409CD7
                  - Arn
              - 'Fn::Join':
                  - ''
                  - - 'Fn::GetAtt':
                        - RestateServiceHandler71409CD7
                        - Arn
                    - ':*'
        Version: '2012-10-17'
      PolicyName: ServiceDeployerInvocationPolicyD09B639D
      Roles:
        - Ref: RestateInvokerRole42565598
"
`;

exports[`Restate constructs Deploy a Lambda service handler to existing Restate environment 1`] = `
"Resources:
  InvokerRole4DB2757E:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::'
                    - Ref: 'AWS::AccountId'
                    - ':root'
        Version: '2012-10-17'
  InvokerRoleDefaultPolicy713FD858:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'lambda:InvokeFunction'
            Effect: Allow
            Resource:
              - 'Fn::GetAtt':
                  - RestateServiceHandler71409CD7
                  - Arn
              - 'Fn::Join':
                  - ''
                  - - 'Fn::GetAtt':
                        - RestateServiceHandler71409CD7
                        - Arn
                    - ':*'
        Version: '2012-10-17'
      PolicyName: InvokerRoleDefaultPolicy713FD858
      Roles:
        - Ref: InvokerRole4DB2757E
  RestateApiKey6463672F:
    Type: 'AWS::SecretsManager::Secret'
    Properties:
      SecretString: api-key-raw
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  RestateServiceHandlerServiceRole07B26D05:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  RestateServiceHandler71409CD7:
    Type: 'AWS::Lambda::Function'
    Properties:
      Code: Any<Object>
      Handler: index.handler
      Role:
        'Fn::GetAtt':
          - RestateServiceHandlerServiceRole07B26D05
          - Arn
      Runtime: nodejs18.x
    DependsOn:
      - RestateServiceHandlerServiceRole07B26D05
  RestateServiceHandlerCurrentVersion40030E671fc2ba09c2d7b4ea8c6a3f8fee895a65:
    Type: 'AWS::Lambda::Version'
    Properties:
      FunctionName:
        Ref: RestateServiceHandler71409CD7
    Metadata:
      'aws:cdk:do-not-refactor': true
  RestateServiceHandlerCurrentVersionRestateServiceDeployment1DB3C4D6:
    Type: 'Custom::RestateServiceDeployment'
    Properties:
      ServiceToken:
        'Fn::GetAtt':
          - ServiceDeployerEventHandler89EAD25F
          - Arn
      adminUrl: 'https://restate.example.com:9070'
      authTokenSecretArn:
        Ref: RestateApiKey6463672F
      serviceLambdaArn:
        Ref: >-
          RestateServiceHandlerCurrentVersion40030E671fc2ba09c2d7b4ea8c6a3f8fee895a65
      invokeRoleArn:
        'Fn::GetAtt':
          - InvokerRole4DB2757E
          - Arn
      private: 'false'
      insecure: 'false'
    DependsOn:
      - ServiceDeployerInvocationPolicyD09B639D
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  ServiceDeployerEventHandlerServiceRoleF133584F:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'secretsmanager:GetSecretValue'
              - 'secretsmanager:DescribeSecret'
            Effect: Allow
            Resource:
              Ref: RestateApiKey6463672F
        Version: '2012-10-17'
      PolicyName: ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9
      Roles:
        - Ref: ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerEventHandler89EAD25F:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Description: Restate custom registration handler
      Handler: entrypoint.handler
      MemorySize: 128
      Role:
        'Fn::GetAtt':
          - ServiceDeployerEventHandlerServiceRoleF133584F
          - Arn
      Runtime: nodejs22.x
      Timeout: 180
    DependsOn:
      - ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9
      - ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerDeploymentLogs5B8BE5D2:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName:
        'Fn::Join':
          - ''
          - - /aws/lambda/
            - Ref: ServiceDeployerEventHandler89EAD25F
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: RetainExceptOnCreate
  ServiceDeployerInvocationPolicyD09B639D:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'lambda:InvokeFunction'
            Effect: Allow
            Resource:
              - 'Fn::GetAtt':
                  - RestateServiceHandler71409CD7
                  - Arn
              - 'Fn::Join':
                  - ''
                  - - 'Fn::GetAtt':
                        - RestateServiceHandler71409CD7
                        - Arn
                    - ':*'
        Version: '2012-10-17'
      PolicyName: ServiceDeployerInvocationPolicyD09B639D
      Roles:
        - Ref: InvokerRole4DB2757E
"
`;

exports[`Restate constructs Restate Cloud Environment construct 1`] = `
"Resources:
  e1InvokerRoleEEC53B29:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Condition:
              StringEquals:
                'sts:ExternalId': env_e1
                'aws:PrincipalArn': 'arn:aws:iam::654654156625:role/RestateCloud'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::654654156625:root'
          - Action: 'sts:TagSession'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::654654156625:root'
        Version: '2012-10-17'
  e2InvokerRoleFFCF8E05:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Condition:
              StringEquals:
                'sts:ExternalId': env_e2
                'aws:PrincipalArn': 'arn:aws:iam::654654156625:role/RestateCloud'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::654654156625:root'
          - Action: 'sts:TagSession'
            Effect: Allow
            Principal:
              AWS:
                'Fn::Join':
                  - ''
                  - - 'arn:'
                    - Ref: 'AWS::Partition'
                    - ':iam::654654156625:root'
        Version: '2012-10-17'
"
`;

exports[`Restate constructs Restate Cloud Environment construct with role reference 1`] = `
"Resources:
  RestateServiceHandlerServiceRole07B26D05:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  RestateServiceHandler71409CD7:
    Type: 'AWS::Lambda::Function'
    Properties:
      Code: Any<Object>
      Handler: index.handler
      Role:
        'Fn::GetAtt':
          - RestateServiceHandlerServiceRole07B26D05
          - Arn
      Runtime: nodejs18.x
    DependsOn:
      - RestateServiceHandlerServiceRole07B26D05
  RestateServiceHandlerCurrentVersion40030E671fc2ba09c2d7b4ea8c6a3f8fee895a65:
    Type: 'AWS::Lambda::Version'
    Properties:
      FunctionName:
        Ref: RestateServiceHandler71409CD7
    Metadata:
      'aws:cdk:do-not-refactor': true
  RestateServiceHandlerCurrentVersionRestateServiceDeployment1DB3C4D6:
    Type: 'Custom::RestateServiceDeployment'
    Properties:
      ServiceToken:
        'Fn::GetAtt':
          - ServiceDeployerEventHandler89EAD25F
          - Arn
      adminUrl: 'https://e1.env.eu.restate.cloud:9070'
      authTokenSecretArn:
        'Fn::Join':
          - ''
          - - 'arn:'
            - Ref: 'AWS::Partition'
            - ':secretsmanager:region:account-id:secret:secret_name'
      serviceLambdaArn:
        Ref: >-
          RestateServiceHandlerCurrentVersion40030E671fc2ba09c2d7b4ea8c6a3f8fee895a65
      invokeRoleArn: 'arn:aws:iam::654654156625:role/Invoker'
      private: 'false'
      insecure: 'false'
    DependsOn:
      - ServiceDeployerInvocationPolicyD09B639D
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  ServiceDeployerEventHandlerServiceRoleF133584F:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'secretsmanager:GetSecretValue'
              - 'secretsmanager:DescribeSecret'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'arn:'
                  - Ref: 'AWS::Partition'
                  - ':secretsmanager:region:account-id:secret:secret_name-??????'
        Version: '2012-10-17'
      PolicyName: ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9
      Roles:
        - Ref: ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerEventHandler89EAD25F:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Description: Restate custom registration handler
      Handler: entrypoint.handler
      MemorySize: 128
      Role:
        'Fn::GetAtt':
          - ServiceDeployerEventHandlerServiceRoleF133584F
          - Arn
      Runtime: nodejs22.x
      Timeout: 180
    DependsOn:
      - ServiceDeployerEventHandlerServiceRoleDefaultPolicyFE2DC3C9
      - ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerDeploymentLogs5B8BE5D2:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName:
        'Fn::Join':
          - ''
          - - /aws/lambda/
            - Ref: ServiceDeployerEventHandler89EAD25F
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: RetainExceptOnCreate
  ServiceDeployerInvocationPolicyD09B639D:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action: 'lambda:InvokeFunction'
            Effect: Allow
            Resource:
              - 'Fn::GetAtt':
                  - RestateServiceHandler71409CD7
                  - Arn
              - 'Fn::Join':
                  - ''
                  - - 'Fn::GetAtt':
                        - RestateServiceHandler71409CD7
                        - Arn
                    - ':*'
        Version: '2012-10-17'
      PolicyName: ServiceDeployerInvocationPolicyD09B639D
      Roles:
        - Invoker
"
`;

exports[`Restate constructs Service Deployer overrides 1`] = `
"Resources:
  ServiceDeployerEventHandlerServiceRoleF133584F:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  ServiceDeployerEventHandler89EAD25F:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code:
        S3Bucket: cdk-hnb659fds-assets-account-id-region
        S3Key: 9c217436df25f6a159d4d2733ad212594c57fd8ca1e88e8041e7682ced3ba6df.zip
      Description: Restate custom registration handler
      Handler: entrypoint.handler
      MemorySize: 128
      Role:
        'Fn::GetAtt':
          - ServiceDeployerEventHandlerServiceRoleF133584F
          - Arn
      Runtime: nodejs22.x
      Timeout: 123
    DependsOn:
      - ServiceDeployerEventHandlerServiceRoleF133584F
  ServiceDeployerDeploymentLogs5B8BE5D2:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName:
        'Fn::Join':
          - ''
          - - /aws/lambda/
            - Ref: ServiceDeployerEventHandler89EAD25F
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: RetainExceptOnCreate
"
`;
